# exam-processor

./: Dockerfile  Makefile  README.md  pyproject.toml
app/: main.py
app/api/v1/endpoints/: exam_processor.py
app/schemas/: exam.py
app/services/: exam_processor.py
app/utils/: file_processor.py
